@@ -1041,7 +1041,6 @@ typedef struct CallFrame {
 				 * meaning of the value is, which we do not
 				 * specify. */
     LocalCache *localCachePtr;
-    VOID *dummy13;
 } CallFrame;
 
 #define FRAME_IS_PROC	0x1
